<resources>
    <string name="app_name">Music</string>
    <string name="shuffle_btn">Shuffle</string>
    <string name="favourite_btn">Favourites</string>
    <string name="playlists_btn">Playlists</string>
    <string name="total_songs">Total Songs</string>
    <string name="world_of_music">World Of Music</string>
    <string name="song_name">Song name</string>
    <string name="singer_name">Singer name</string>
    <string name="back_btn">back button</string>
    <string name="favourites_btn">favourite button</string>
    <string name="image_song">Image Song</string>
    <string name="start_tv">00:00</string>
    <string name="end_tv">Loading...</string>
    <string name="repeat_btn">Repeat btn</string>
    <string name="timer_btn">Timer btn</string>
    <string name="equalize_btn">Equalize btn</string>
    <string name="share_btn">Share btn</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="app_icon">Icon</string>
    <string name="text_nav">Welcome to \nWorld of Music</string>
    <string name="nav_feedback">FeedBack</string>
    <string name="nav_setting">Settings</string>
    <string name="nav_about">About</string>
    <string name="nav_exit">Exit</string>
    <string name="song_album">Song Album</string>
    <string name="channel_name">Channel Music</string>
    <string name="random_song">Phát ngẫu nhiên</string>
    <string name="account">Cá nhân</string>
    <string name="find_out">Khám phá</string>
    <string name="songs">Bài hát</string>
    <string name="album">Album</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>