<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/frameLayout_song_playing" />

    <FrameLayout
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/shuffleBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/shuffle_btn"
                android:drawableTop="@drawable/note_music_icon"
                android:text="@string/find_out"
                android:textAllCaps="false"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/allSongBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/favourite_btn"
                android:drawableTop="@drawable/music_song_icon"
                android:text="@string/songs"
                android:textAllCaps="false"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/favouriteBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/playlists_btn"
                android:drawableTop="@drawable/album_icon"
                android:text="@string/album"
                android:textAllCaps="false"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/accountBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/playlists_btn"
                android:drawableTop="@drawable/account_icon"
                android:text="@string/account"
                android:textAllCaps="false"
                android:textColor="@color/black"
                />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout_song_playing"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_above="@+id/bottom_navigation"
        android:visibility="gone"></FrameLayout>


</RelativeLayout>