<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PlayingSongActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnBackPlayingSong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_btn"
            android:src="@drawable/down_icon"
            app:tint="@color/black" />

        <TextView
            android:id="@+id/tvStyleSong"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/world_of_music"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/btnMoreAction"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="5dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/favourites_btn"
            android:src="@drawable/more_icon_2" />
    </LinearLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageViewSongPlayingActivity"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:contentDescription="@string/image_song"
        android:src="@drawable/splash_screen"
        app:shapeAppearanceOverlay="@style/curved"
        app:strokeColor="@color/cool_blue"
        app:strokeWidth="5dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp">

        <ImageView
            android:id="@+id/btnShareAction"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/share_icon"
            android:layout_centerVertical="true"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/btnAddToFavourite"
            android:layout_toEndOf="@+id/btnShareAction"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TvNameSongPlay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:gravity="center"
                android:text="@string/song_name"
                android:textColor="@color/black"
                android:textSize="23sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TvNameSingerPlay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:gravity="center"
                android:text="@string/singer_name"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/btnAddToFavourite"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/favorite_empty_icon" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_margin="20dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/TvTimeSongPlay"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/start_tv"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seekBarPlay"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/TvTimeTotalsPlay"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/start_tv"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:padding="20dp"
        android:orientation="horizontal">

        <ImageButton
            android:layout_marginRight="10dp"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/repeat_btn"
            android:src="@drawable/repeat_icon"
            app:tint="@color/cool_pink" />
        <ImageView
            android:id="@+id/btnPreviousPlay"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/background_button_play"
            android:src="@drawable/previous_icon" />

        <ImageView
            android:id="@+id/btnPausePlayActivity"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="25dp"
            android:background="@drawable/background_button_pause"
            android:backgroundTint="@android:color/holo_red_dark"
            android:src="@drawable/pause_icon"
            app:tint="@color/white" />

        <ImageView
            android:id="@+id/btnNextPlay"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/background_button_play"
            android:src="@drawable/next_icon" />
        <ImageButton
            android:layout_marginLeft="10dp"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/timer_btn"
            android:src="@drawable/timer_icon"
            app:tint="@color/cool_pink" />

    </LinearLayout>




</LinearLayout>