<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ListSongFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/shuffleBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/shuffle_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:drawableTop="@drawable/shuffle_icon"
                android:text="@string/shuffle_btn"
                android:textColor="@color/black"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/playlistsBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/favourite_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:drawableTop="@drawable/playlist_icon"
                android:text="@string/playlists_btn"
                android:textColor="@color/black"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/favouriteBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/playlists_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:drawableTop="@drawable/favorite_icon"
                android:text="@string/favourite_btn"
                android:textColor="@color/black"
                android:textAllCaps="false"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tvTotalSongs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_songs"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:textColor="@color/black"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/musicRV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

</FrameLayout>